# subterra

./: .gitignore  CMakeLists.txt
inc/glad/: glad.h
inc/subterra/: logger.h  main.h  player.h  shader.h
inc/subterra/gfx/: geometry.i  maze.h  maze.i  shader.h  texture.h
inc/subterra/util/: callback.h  logger.h  window.h
lib/cglm/: CMakeLists.txt
src/: glad.c  logger.c  main.c  player.c  shader.c
src/gfx/: maze.c  shader.c  texture.c
src/util/: callback.c  logger.c  window.c
